refractor(extended-1.2): add attribute alt for tags img

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="aaa">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="Todo">
       <a 
         class="more_inf"
         href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -47,7 +47,7 @@
             >
             <button class="edit">Edit</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="remove">
             </button>
           </li>
           <li class="editMode">
@@ -60,7 +60,7 @@
             >
             <button class="edit">Save</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="remove">
             </button>
           </li>
         </ul>
@@ -80,7 +80,7 @@
               >
               <button class="edit">Edit</button>
               <button class="delete">
-                <img src="./remove.svg">
+                <img src="./remove.svg" alt="remove">
               </button>
             </li>
           </ul>
