--- a/index.html
+++ b/index.html
@@ -6,81 +6,85 @@
       href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
       rel="stylesheet"
     >
-    <link
+     <link
       rel="stylesheet"
       href="style.css"
       media="screen"
       charset="utf-8"
     >
   </head>
-  <body>
-    <header class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="Todo">
+  <body class="body">
+    <header class="header">
+      <img
+        class="header__images"
+        src="./eisenhower-matrix.jpg"
+        alt="The Eisenhower matrix illustrationa"
+      >
       <a 
-        class="more_inf"
+        class="header__link"
         href="https://goal-life.com/page/method/matrix-eisenhower"
       >
        Want more details?
       </a>
     </header>
-    <main class="centered-main-page-element">
-      <section id="topSectionForAddingElementToList">
-        <h2>Add Item</h2>
-        <div class="task-row-wrapper">
-          <input
-            id="new-task"
-            class="task"
+    <main class="main">
+      <section id="add-task">
+        <h2 class="add-task__title title">Add Item</h2>
+        <div class="add-task__row">
+          <input            
+            class="add-task__new-task task-field task-input"
             type="text"
           >
-          <button>Add</button>
+          <button class="btn-add task-btn">Add</button>
         </div>
       </section>
-      <section>
-        <h2>Todo</h2>
-        <ul id="incompleteTasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
+      <section class="incomplete-task">
+        <h2 class="incomplete-task__title title">Todo</h2>
+        <ul class="incomplete-task__list">
+          <li class="task">
+            <input class="task-checkbox" type="checkbox">
+            <label class="task-text">Pay Bills</label>
             <input 
               type="text"
-              class="task"
+              class="task-input task-field"
             >
-            <button class="edit">Edit</button>
-            <button class="delete">
-              <img src="./remove.svg" alt="remove">
+            <button class="btn-edit task-btn">Edit</button>
+            <button class="btn-edit task-btn">
+              <img class="btn-delete__img" src="./remove.svg" alt="remove">
             </button>
           </li>
-          <li class="editMode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
+          <li class="task task-edit">
+            <input class="task-checkbox" type="checkbox">
+            <label class="task-text">Go Shopping</label>
             <input
               type="text"
               value="Go Shopping"
-              class="task"
+              class="task-input task-field"
             >
-            <button class="edit">Save</button>
-            <button class="delete">
-              <img src="./remove.svg" alt="remove">
+            <button class="btn-edit task-btn">Save</button>
+            <button class="btn-delete task-btn">
+              <img class="btn-delete__img" src="./remove.svg" alt="remove">
             </button>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Completed</h2>
-          <ul id="completed-tasks">
-            <li>
-              <input 
+      <section class="completed-task">
+        <h2 class="completed-task__title title">Completed</h2>
+          <ul class="completed-task__list" id="completed-tasks">
+            <li class="task">
+              <input
+                class="task-checkbox"
                 type="checkbox"
                 checked
               >
-              <label class="task">See the Doctor</label>
-              <input 
-                type="text"
-                class="task"
+              <label class="task-text">See the Doctor</label>
+              <input
+                class="task-input task-field" 
+                type="text"              
               >
-              <button class="edit">Edit</button>
-              <button class="delete">
-                <img src="./remove.svg" alt="remove">
+              <button class="btn-edit task-btn">Edit</button>
+              <button class="btn-delete task-btn">
+                <img class="btn-delete__img" src="./remove.svg" alt="remove">
               </button>
             </li>
           </ul>
