fix(extended-2.1): update html  to BEM

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               class="task-input task-field"
             >
             <button class="btn-edit task-btn">Edit</button>
-            <button class="btn-edit task-btn">
+            <button class="btn-delete task-btn">
               <img class="btn-delete__img" src="./remove.svg" alt="remove">
             </button>
           </li>
