refactor(extended-2.1): update html file

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </a>
     </header>
     <main class="main">
-      <section id="add-task">
+      <section class="add-task">
         <h2 class="add-task__title title">Add Item</h2>
         <div class="add-task__row">
           <input            
